<resources>
    <string name="app_name">MyApp</string>
    <string name="network_error">当前网络不可用，请检查网络设置</string>

    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="submit">提交</string>
    <string name="commit">提交</string>
    <string name="done">完成</string>
    <string name="complete">完成</string>
    <string name="finish">结束</string>
    <string name="insert">插入</string>
    <string name="update">更新</string>
    <string name="query">查询</string>
    <string name="clear">清除</string>
    <string name="reset">重置</string>
    <string name="camera">相机</string>
    <string name="take_photo">拍照</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="bluetooth">蓝牙</string>
    <string name="scan">扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="discover">发现</string>
    <string name="refresh">刷新</string>
    <string name="retry">重试</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="stop">停止</string>
    <string name="request">请求</string>
    <string name="response">响应</string>
    <string name="debug">调试</string>
    <string name="test">测试</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="create">创建</string>
    <string name="load">加载</string>
    <string name="write">写入</string>
    <string name="save">保存</string>

</resources>
